--- a/ipynb/day1-1_cellranger.ipynb
+++ b/ipynb/day1-1_cellranger.ipynb
@@ -91,13 +91,13 @@
    "metadata": {},
    "source": [
     "## Data overview\n",
-    "Have a look in the directory `course_data/reads` and `/data/cellranger_index`. In the `reads` directory you will find reads on one sample: `ETV6-RUNX1_1`. In the analysis part of the course we will work with six samples, but due to time and computational limitations we will run `cellranger count` on one of the samples, and only reads originating from chromsome 21 and 22. \n",
+    "Have a look in the directory `course_data/reads` and `cellranger_index`. In the `reads` directory you will find reads on one sample: `ETV6-RUNX1_1`. In the analysis part of the course we will work with six samples, but due to time and computational limitations we will run `cellranger count` on one of the samples, and only reads originating from chromsome 21 and 22. \n",
     "\n",
     "The input you need to run `cellranger count` are the sequence reads and a reference. Here, we have prepared a reference only with chromosome 21 and 22, but in 'real life' you would of course get the full reference genome of your species. The reference has a specific format. You can download precomputed human and mouse references from the [10X website](https://support.10xgenomics.com/single-cell-gene-expression/software/downloads/latest). If your species of interest is not one of those, you will have to generate it yourself. For that, have a look [here](https://support.10xgenomics.com/single-cell-gene-expression/software/pipelines/latest/using/tutorial_mr).\n",
     "\n",
     "To be able to run cellranger in the compute environment, first run:\n",
     "\n",
-    "    export PATH=/data/cellranger-8.0.0:$PATH"
+    "    export PATH=/data/cellranger-8.0.1:$PATH"
    ]
   },
   {
@@ -109,8 +109,8 @@
     "\n",
     "You can find the input files here:\n",
     "\n",
-    "- reads: `single_cell_course/course_data/reads/` (from the downloaded tar package in your home directory)\n",
-    "- pre-indexed reference: `/data/cellranger_index`"
+    "- reads: `course_data/reads/` (from the downloaded tar package in your home directory)\n",
+    "- pre-indexed reference: `cellranger_index`"
    ]
   },
   {
@@ -151,8 +151,8 @@
     "    cellranger count \\\n",
     "    --id=ETV6-RUNX1_1 \\\n",
     "    --sample=ETV6-RUNX1_1 \\\n",
-    "    --transcriptome=/data/cellranger_index \\\n",
-    "    --fastqs=single_cell_course/course_data/reads \\\n",
+    "    --transcriptome=cellranger_index \\\n",
+    "    --fastqs=course_data/reads \\\n",
     "    --localcores=4 \\\n",
     "    --create-bam=true\n",
     "</pre>\n",
@@ -297,7 +297,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Diagnostic QC metrics – Sequencing\n",
+    "## Diagnostic QC metrics – Sequencing\n",
     "\n",
     "![](Aspose.Words.2e953e9a-44c0-496e-9758-25b7bd47b079.003.jpeg)\n",
     "\n",
