--- a/ipynb/day1-3_normalization_scaling.ipynb
+++ b/ipynb/day1-3_normalization_scaling.ipynb
@@ -65,7 +65,8 @@
     "       element.style.display = 'none';\n",
     "   }\n",
     "}\n",
-    "</script>"
+    "</script>\n",
+    "</div>"
    ]
   },
   {
