--- a/ipynb/day1-1_cellranger.ipynb
+++ b/ipynb/day1-1_cellranger.ipynb
@@ -296,8 +296,8 @@
    "id": "77153a82-2c07-4818-859e-2c30cc62ea8e",
    "metadata": {},
    "source": [
-    "\n",
-    "## Diagnostic QC metrics – Sequencing\n",
+    "## Diagnostics\n",
+    "### QC metrics – Sequencing\n",
     "\n",
     "![](Aspose.Words.2e953e9a-44c0-496e-9758-25b7bd47b079.003.jpeg)\n",
     "\n",
@@ -330,7 +330,7 @@
     "\n",
     "Fraction of UMI bases with Q-score >= 30, excluding very low quality/no-call (Q <= 2) bases from the denominator.\n",
     "\n",
-    "### Diagnostic QC metrics – Mapping\n",
+    "### QC metrics – Mapping\n",
     "\n",
     "![](Aspose.Words.2e953e9a-44c0-496e-9758-25b7bd47b079.004.jpeg)\n",
     "\n",
