--- a/ipynb/day1-3_normalization_scaling.ipynb
+++ b/ipynb/day1-3_normalization_scaling.ipynb
@@ -127,7 +127,7 @@
     "       element.style.display = 'none';\n",
     "   }\n",
     "}\n",
-    "</script>"
+    "</script> </div>"
    ]
   },
   {
@@ -399,7 +399,7 @@
     "       element.style.display = 'none';\n",
     "   }\n",
     "}\n",
-    "</script>"
+    "</script> </div>"
    ]
   },
   {
@@ -576,7 +576,7 @@
     "       element.style.display = 'none';\n",
     "   }\n",
     "}\n",
-    "</script>"
+    "</script> </div>"
    ]
   },
   {
@@ -665,7 +665,7 @@
     "       element.style.display = 'none';\n",
     "   }\n",
     "}\n",
-    "</script>"
+    "</script> </div>"
    ]
   },
   {
@@ -756,7 +756,7 @@
     "       element.style.display = 'none';\n",
     "   }\n",
     "}\n",
-    "</script>"
+    "</script> </div>"
    ]
   },
   {
