--- a/ipynb/day2-1_dimensionality_reduction.ipynb
+++ b/ipynb/day2-1_dimensionality_reduction.ipynb
@@ -63,7 +63,7 @@
     "       element.style.display = 'none';\n",
     "   }\n",
     "}\n",
-    "</script>"
+    "</script> </div>"
    ]
   },
   {
