--- a/ipynb/day1-2_analysis_tools_qc.ipynb
+++ b/ipynb/day1-2_analysis_tools_qc.ipynb
@@ -17,10 +17,9 @@
     "\n",
     "A useful overview on the current best practices is found in the articles below, which we also borrow from in this tutorial. We thank the authors for compiling such handy resources!\n",
     "\n",
-    "Current best practices in single-cell RNA-seq analysis are explained in a recent Nature Review: https://www.nature.com/articles/s41576-023-00586-w\n",
+    "Current best practices in single-cell RNA-seq analysis are explained in a recent [Nature Review](https://www.nature.com/articles/s41576-023-00586-w)\n",
     "\n",
-    "Accompanying this review is an online webpage, which is still under development but can be quite handy nonetheless:\n",
-    "https://www.sc-best-practices.org/preamble.html"
+    "Accompanying this review is an [online webpage](https://www.sc-best-practices.org/preamble.html), which is still under development but can be quite handy nonetheless:"
    ]
   },
   {
@@ -55,7 +54,7 @@
    "id": "67b1fbe7-cd5b-46a1-929b-93a7d1083155",
    "metadata": {},
    "source": [
-    "After the generation of the count matrices with CellRanger, the next step is the data analysis. The scanpy package is currently the most popular software in Python to do this. To start working with scanpy, you must import the package into your Jupyter notebook as follows:"
+    "After the generation of the count matrices with cellranger, the next step is the data analysis. The scanpy package is currently the most popular software in Python to do this. To start working with scanpy, you must import the package into your Jupyter notebook as follows:"
    ]
   },
   {
@@ -73,7 +72,7 @@
    "id": "d69e2d1c-97c6-4f83-9162-0e49d5c4daa0",
    "metadata": {},
    "source": [
-    "An excellent resource for documentation on scanpy can be found on the software page at the following link: https://scanpy.readthedocs.io/en/stable/"
+    "An excellent resource for documentation on scanpy can be found on the software page at the following [link](https://scanpy.readthedocs.io/en/stable/)."
    ]
   },
   {
