--- a/ipynb/day2-2_integration.ipynb
+++ b/ipynb/day2-2_integration.ipynb
@@ -52,7 +52,7 @@
     "       element.style.display = 'none';\n",
     "   }\n",
     "}\n",
-    "</script>"
+    "</script> </div>"
    ]
   },
   {
