further notebook improvements, specify numpy version in requirements

--- a/ipynb/day1-2_analysis_tools_qc.ipynb
+++ b/ipynb/day1-2_analysis_tools_qc.ipynb
@@ -110,12 +110,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_info = pd.read_csv(\"../course_data/sample_info_course.csv\")\n",
+    "sample_info = pd.read_csv(\"course_data/sample_info_course.csv\")\n",
     "\n",
     "datadirs = {}\n",
     "for sample_name in sample_info[\"SampleName\"]:\n",
     "    if \"PBMMC\" in sample_name:\n",
-    "        datadirs[sample_name] = \"../course_data/count_matrices/\" + sample_name + \"/outs/filtered_feature_bc_matrix\""
+    "        datadirs[sample_name] = \"course_data/count_matrices/\" + sample_name + \"/outs/filtered_feature_bc_matrix\""
    ]
   },
   {
