--- a/ipynb/day1-3_normalization_scaling.ipynb
+++ b/ipynb/day1-3_normalization_scaling.ipynb
@@ -76,7 +76,7 @@
     "id": "bJ-EJyEz0wd2"
    },
    "source": [
-    "### Shift logarithm normalization\n",
+    "## Shift logarithm normalization\n",
     "\n",
     "Each count in a count matrix represents the successful capture, reverse transcription and sequencing of a molecule of cellular mRNA. Count depths for identical cells can differ due to the variability inherent in each of these steps. Thus, when gene expression is compared between cells based on count data, any difference may have arisen solely due to sampling effects. Normalization addresses this issue by e.g. scaling count data to obtain correct relative gene expression abundances between cells.\n",
     "\n",
