--- a/ipynb/day3-4_velocity2.ipynb
+++ b/ipynb/day3-4_velocity2.ipynb
@@ -254,7 +254,7 @@
    "id": "29e4ed68-1173-478a-92d5-569e72896519",
    "metadata": {},
    "source": [
-    "# Initialize cycle and phase objects with priors"
+    "## Initialize cycle and phase objects with priors"
    ]
   },
   {
