--- a/ipynb/day1-1_cellranger.ipynb
+++ b/ipynb/day1-1_cellranger.ipynb
@@ -21,7 +21,7 @@
     "        text-decoration: none;\n",
     "    }\n",
     "</style>\n",
-    "<a href=\"../assets/pdf/01_introduction.pdf\" target=\"_blank\" class=\"large-link\">Presentation: General introduction</a>"
+    "<a href=\"../assets/pdf/01_introduction.pdf\" target=\"_blank\" class=\"large-link\">Download Presentation: General introduction</a>"
    ]
   },
   {
@@ -37,7 +37,23 @@
     "        text-decoration: none;\n",
     "    }\n",
     "</style>\n",
-    "<a href=\"../assets/pdf/02_introduction_scRNAseq.pdf\" target=\"_blank\" class=\"large-link\">Presentation: Introduction to scRNA-seq</a>"
+    "<a href=\"../assets/pdf/02_introduction_scRNAseq.pdf\" target=\"_blank\" class=\"large-link\">Download Presentation: Introduction to scRNA-seq</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65f18bc2-5ab2-4961-a8c5-8128963ecc2e",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    .large-link {\n",
+    "        font-size: 30px;\n",
+    "        font-family: Arial, sans-serif;\n",
+    "        color: #333;\n",
+    "        text-decoration: none;\n",
+    "    }\n",
+    "</style>\n",
+    "<a href=\"../assets/pdf/03_cellranger.pdf\" target=\"_blank\" class=\"large-link\">Download Presentation: Introduction to Cell Ranger</a>"
    ]
   },
   {
@@ -463,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
