--- a/ipynb/day1-2_analysis_tools_qc.ipynb
+++ b/ipynb/day1-2_analysis_tools_qc.ipynb
@@ -10,6 +10,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e121d63c-7ae9-43e4-9ff8-be784f82be4a",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    .large-link {\n",
+    "        font-size: 30px;\n",
+    "        font-family: Arial, sans-serif;\n",
+    "        color: #333;\n",
+    "        text-decoration: none;\n",
+    "    }\n",
+    "</style>\n",
+    "<a href=\"../assets/pdf/04_scanpy_workflow.pdf\" target=\"_blank\" class=\"large-link\">Download Presentation: Introduction to scanpy</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fbb52fa0-2e18-4572-a2c8-ad97cd71bdc8",
    "metadata": {},
    "source": [
@@ -1380,7 +1396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
