--- a/ipynb/day2-3_clustering.ipynb
+++ b/ipynb/day2-3_clustering.ipynb
@@ -5,7 +5,23 @@
    "id": "438fee88-5c8e-45f8-8414-2cbba8be31e7",
    "metadata": {},
    "source": [
-    "# Clustering and cell annotation"
+    "# Clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac9bdf29-b587-4ca6-9aff-c67a62b33494",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    .large-link {\n",
+    "        font-size: 30px;\n",
+    "        font-family: Arial, sans-serif;\n",
+    "        color: #333;\n",
+    "        text-decoration: none;\n",
+    "    }\n",
+    "</style>\n",
+    "<a href=\"../assets/pdf/08_clustering_day2.pdf\" target=\"_blank\" class=\"large-link\">Download Presentation: Clustering</a>"
    ]
   },
   {
@@ -333,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
