--- a/ipynb/day2-4_visualization.ipynb
+++ b/ipynb/day2-4_visualization.ipynb
@@ -9,6 +9,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9041e2f3-0e8f-4640-9538-0e67e1a38c26",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    .large-link {\n",
+    "        font-size: 30px;\n",
+    "        font-family: Arial, sans-serif;\n",
+    "        color: #333;\n",
+    "        text-decoration: none;\n",
+    "    }\n",
+    "</style>\n",
+    "<a href=\"../assets/pdf/09_cell_type_annotation_and_visualization_day2.pdf\" target=\"_blank\" class=\"large-link\">Download Presentation: Cell type annotation and visualization</a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "da6a6f44-4a88-4bb4-aa70-843434d02d8b",
@@ -1303,7 +1319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
