update qc notebook

--- a/ipynb/day1-2_analysis_tools_qc.ipynb
+++ b/ipynb/day1-2_analysis_tools_qc.ipynb
@@ -595,8 +595,8 @@
     "plt.hist(adata.obs['n_counts'], bins=100)\n",
     "plt.xlabel(\"Number of UMIs\")\n",
     "plt.ylabel(\"Number of cells\")\n",
-    "plt.axvline(2000, c=\"r\") # specify the lower cutoff for total UMIs\n",
-    "plt.axvline(12500, c=\"r\") # specify the upper cutoff for total UMIs\n",
+    "plt.axvline(2000, c=\"r\") # choose a lower cutoff for total UMIs\n",
+    "plt.axvline(12500, c=\"r\") # choose a upper cutoff for total UMIs\n",
     "plt.xlim(0, 20000)\n",
     "plt.show()"
    ]
@@ -650,8 +650,8 @@
     "adata.obs['n_genes'] = expressed_genes\n",
     "\n",
     "plt.hist(adata.obs['n_genes'], bins=100)\n",
-    "plt.axvline(500, c=\"r\") # specify the lower cutoff for number of detected genes\n",
-    "plt.axvline(4000, c=\"r\") # specify the upper cutoff for number of detected genes\n",
+    "plt.axvline(500, c=\"r\") # choose a lower cutoff for number of detected genes\n",
+    "plt.axvline(4000, c=\"r\") # choose a upper cutoff for number of detected genes\n",
     "plt.xlabel(\"Number of Genes\")\n",
     "plt.ylabel(\"Number of Cells\")\n",
     "plt.show()"
@@ -1177,7 +1177,7 @@
     "id": "b1CwUj330wd0"
    },
    "source": [
-    "**Exercise 9**: Once you have selected your QC filtering criteria, you need to actually do the filtering! You can do this either (1) using the QC thresholds you selected above or (2) obtaining automated thresholds using scanpy quality control metrics. Whether you choose the (1) or (2) approach is up to you. Unfortunately, there is not much automation in the quality control steps at this stage, although there are ongoing efforts by the single cell community to create a more unbiased QC approaches."
+    "**Exercise 9**: Once you have selected your QC filtering criteria, you need to actually do the filtering! You can do this either (1) using the QC thresholds you selected above or (2) obtaining automated thresholds using scanpy quality control metrics. Whether you choose the (1) or (2) approach is up to you. Unfortunately, there is not much automation in the quality control steps at this stage, although there are ongoing efforts by the single cell community to create a more unbiased QC approaches. We suggest manually selecting your filtering thresholds using the plots generated above as a guide."
    ]
   },
   {
@@ -1197,7 +1197,7 @@
     "id": "_Eu5hT3Z0wd1"
    },
    "source": [
-    "Hint: you can also filter an AnnData object using indexing approaches, as with numpy arrays and pandas data frames. For instance, the follow command filters genes (columns) on a qc metric for percent `mitochondrial reads: adata = adata[adata.obs['percent_mito'] < 0.08, :].copy()`"
+    "Hint: you can also filter an AnnData object using indexing approaches, as with numpy arrays and pandas data frames. For instance, the following command filters genes (columns) on a qc metric for percent `mitochondrial reads: adata = adata[adata.obs['percent_mito'] < 0.08, :].copy()`"
    ]
   },
   {
@@ -1223,8 +1223,8 @@
    },
    "outputs": [],
    "source": [
-    "sc.pp.filter_cells(adata, min_counts=2000) # apply threshold from above to actually do the filtering\n",
-    "sc.pp.filter_cells(adata, max_counts=12500) # apply threshold from above to actually do the filtering"
+    "sc.pp.filter_cells(adata, min_counts=??) # apply threshold from above to actually do the filtering\n",
+    "sc.pp.filter_cells(adata, max_counts=??) # apply threshold from above to actually do the filtering"
    ]
   },
   {
@@ -1250,8 +1250,8 @@
    },
    "outputs": [],
    "source": [
-    "sc.pp.filter_cells(adata, min_genes=200) # apply threshold from above to actually do the filtering\n",
-    "sc.pp.filter_cells(adata, max_genes=5000) # apply threshold from above to actually do the filtering"
+    "sc.pp.filter_cells(adata, min_genes=??) # apply threshold from above to actually do the filtering\n",
+    "sc.pp.filter_cells(adata, max_genes=??) # apply threshold from above to actually do the filtering"
    ]
   },
   {
@@ -1273,7 +1273,8 @@
    },
    "outputs": [],
    "source": [
-    "adata = adata[adata.obs['pct_counts_mt'] <= 8, :].copy() # apply threshold from above to actually do the filtering"
+    "adata = adata[adata.obs['pct_counts_mt'] <= 8, :].copy() # apply threshold from above to actually do the filtering\n",
+    "# the authors of the original study used 8% as their threshold here."
    ]
   },
   {
