update qc notebook

--- a/ipynb/day1-2_analysis_tools_qc.ipynb
+++ b/ipynb/day1-2_analysis_tools_qc.ipynb
@@ -1197,7 +1197,7 @@
     "id": "_Eu5hT3Z0wd1"
    },
    "source": [
-    "Hint: you can also filter an AnnData object using indexing approaches, as with numpy arrays and pandas data frames. For instance, the following command filters genes (columns) on a qc metric for percent `mitochondrial reads: adata = adata[adata.obs['percent_mito'] < 0.08, :].copy()`"
+    "Hint: you can also filter an AnnData object using indexing approaches, as with numpy arrays and pandas data frames. For instance, the following command filters genes (columns) on a qc metric for percent `mitochondrial reads: adata = adata[adata.obs['pct_counts_mt'] < 0.08, :].copy()`"
    ]
   },
   {
