--- a/course_schedule.qmd
+++ b/course_schedule.qmd
@@ -15,9 +15,9 @@ title: "Course schedule"
 |         	| 10:15 AM 	| 10:45 AM 	| BREAK                          	|
 | block 2 	| 10:45 AM 	| 12:00 PM 	| Presentation: Andreia Gouvêa, 10X Field Application Scientist 	     |
 |         	| 12:00 PM 	| 1:00 PM  	| BREAK                          	|
-| block 3 	| 1:00 PM  	| 3:00 PM  	| [Cell Ranger](ipynb/day1-1_cellranger.ipynb) and [Quality Control](ipynb/day1-2_analysis_tools_qc.ipynb)             	 |
+| block 3 	| 1:00 PM  	| 3:00 PM  	| [Cell Ranger](ipynb/day1-1_cellranger.ipynb)             	 |
 |         	| 3:00 PM  	| 3:30 PM  	| BREAK                          	|
-| block 4 	| 3:30 PM  	| 5:00 PM  	| [Normalization and Scaling](ipynb/day1-3_normalization_scaling.ipynb)                  
+| block 4 	| 3:30 PM  	| 5:00 PM  	| [Quality Control](ipynb/day1-2_analysis_tools_qc.ipynb) and [Normalization and Scaling](ipynb/day1-3_normalization_scaling.ipynb)                  
 
 
 ## Day 2
