--- a/ipynb/day1-3_normalization_scaling.ipynb
+++ b/ipynb/day1-3_normalization_scaling.ipynb
@@ -70,16 +70,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "3ddb229f-2243-433a-acd6-ab11c5acec46",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata = sc.read_h5ad(\"PBMC_analysis_SIB_tutorial.h5ad\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "63b552ff-13e4-420b-922a-38a949b186a9",
    "metadata": {
@@ -383,17 +373,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "2f3a4d84-4f32-4618-95d5-07db990c5f77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    sc.pp.normalize_total(adata, target_sum=None)\n",
-    "    sc.pp.log1p(adata)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "80656033-07b4-4e05-af41-bfc72979ca98",
    "metadata": {
@@ -557,14 +536,13 @@
     "    G2M     940\n",
     "    Name: count, dtype: int64\n",
     "  </pre>\n",
-    "    You can then use <code>adata.n_obs</code> to divide the estimates by the total. You should get about:\n",
+    "You can then use <code>adata.n_obs</code> to divide the estimates by the total. You should get about:\n",
     "  <pre>\n",
     "    phase\n",
     "    G1     0.592796\n",
     "    S      0.249954\n",
     "    G2M    0.157250\n",
     "  </pre>\n",
-    "</div>\n",
     "<script>\n",
     "function toggleVisibility(id) {\n",
     "   var element = document.getElementById(id);\n",
@@ -620,7 +598,7 @@
    },
    "outputs": [],
    "source": [
-    "# suggestion: start with 3000 highly variable genes\n",
+    "# suggestion: start with 2000 or 3000 highly variable genes\n",
     "sc.pp.highly_variable_genes(adata, n_top_genes=3000)"
    ]
   },
@@ -676,11 +654,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f6e6cf08-06f1-4ee4-9ba2-a2b115e233cb",
+   "metadata": {},
+   "source": [
+    "## Scaling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "107db15d-6112-4d9d-a213-c5fe49bd31d1",
    "metadata": {},
    "source": [
-    "## Scaling\n",
-    "\n",
     "Next, we apply scaling, a linear transformation that is a standard pre-processing step prior to dimensional reduction techniques like PCA. The `sc.pp.scale` function:\n",
     "\n",
     "- shifts the expression of each gene, so that the mean expression across cells is 0\n",
@@ -776,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
