--- a/ipynb/day1-3_normalization_scaling.ipynb
+++ b/ipynb/day1-3_normalization_scaling.ipynb
@@ -10,6 +10,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "87b6917f-ea50-4d9d-af44-629b600bb5d1",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    .large-link {\n",
+    "        font-size: 30px;\n",
+    "        font-family: Arial, sans-serif;\n",
+    "        color: #333;\n",
+    "        text-decoration: none;\n",
+    "    }\n",
+    "</style>\n",
+    "<a href=\"../assets/pdf/04_scanpy_workflow.pdf\" target=\"_blank\" class=\"large-link\">Download Presentation: Introduction to scanpy</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "73671bd3-e64f-473d-aa4a-c5cc6a34d0d2",
    "metadata": {},
    "source": [
