--- a/course_schedule.qmd
+++ b/course_schedule.qmd
@@ -24,13 +24,13 @@ title: "Course schedule"
 
 | block   	| start    	| end      	| subject                             	|
 |---------	|----------	|----------	|-------------------------------------	|
-| block 1 	| 9:15 AM  	| 10:30 AM 	| [Dimensionality Reduction](ipynb/day2-1_dimensionality_reduction.ipynb) and [Integration](ipynb/day2-2_integration.ipynb)	|
-|         	| 10:30 AM 	| 11:00 AM 	| BREAK                               	|
-| block 2 	| 11:00 AM 	| 12:30 PM 	| [Clustering](ipynb/day2-3_clustering.ipynb)  |
-|         	| 12:30 PM 	| 1:30 PM  	| BREAK                               	|
-| block 3 	| 1:30 PM  	| 3:00 PM  	| [Cell annotation](ipynb/day2-4_visualization.ipynb)     	|
+| block 1 	| 9:15 AM  	| 10:15 AM 	| [Normalization and Scaling](ipynb/day1-3_normalization_scaling.ipynb) 	|
+|         	| 10:15 AM 	| 10:45 AM 	| BREAK                               	|
+| block 2 	| 10:45 AM  	| 12:15 PM 	| [Dimensionality Reduction](ipynb/day2-1_dimensionality_reduction.ipynb) and [Integration](ipynb/day2-2_integration.ipynb)	|
+|         	| 12:15 PM 	| 1:15 PM  	| BREAK                               	|
+| block 3 	| 1:15 PM  	| 3:00 PM  	| [Clustering](ipynb/day2-3_clustering.ipynb) and [Visualization](ipynb/day2-4_visualization.ipynb)     	|
 |         	| 3:00 PM  	| 3:30 PM  	| BREAK                               	|
-| block 4 	| 3:30 PM  	| 5:00 PM  	| [Visualization & further exercises](ipynb/day2-4_visualization.ipynb) 	|
+| block 4 	| 3:30 PM  	| 5:00 PM  	| [Visualization & Cell Annotation](ipynb/day2-4_visualization.ipynb) 	|
 
 ## Day 3
 
