final slides update for day 2

--- a/ipynb/day2-1_dimensionality_reduction.ipynb
+++ b/ipynb/day2-1_dimensionality_reduction.ipynb
@@ -10,6 +10,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "540a7f83-7f7e-49ed-91c4-f20ce2d5e3eb",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    .large-link {\n",
+    "        font-size: 30px;\n",
+    "        font-family: Arial, sans-serif;\n",
+    "        color: #333;\n",
+    "        text-decoration: none;\n",
+    "    }\n",
+    "</style>\n",
+    "<a href=\"../assets/pdf/05_06_dimred_integration.pdf\" target=\"_blank\" class=\"large-link\">Download Presentation: Dimensionality Reduction and Integration</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f78a3699-243e-4ffd-b6e0-d08b567caa7f",
    "metadata": {},
    "source": [
@@ -667,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
