--- a/ipynb/day2-2_integration.ipynb
+++ b/ipynb/day2-2_integration.ipynb
@@ -9,6 +9,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b6ded15-025d-4937-b0ed-e8c91f79990f",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    .large-link {\n",
+    "        font-size: 30px;\n",
+    "        font-family: Arial, sans-serif;\n",
+    "        color: #333;\n",
+    "        text-decoration: none;\n",
+    "    }\n",
+    "</style>\n",
+    "<a href=\"../assets/pdf/05_06_dimred_integration.pdf\" target=\"_blank\" class=\"large-link\">Download Presentation: Dimensionality Reduction and Integration</a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "cc34b3db-85ce-4642-b8f8-42d74b990aa8",
@@ -346,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
