--- a/ipynb/day2-4_visualization.ipynb
+++ b/ipynb/day2-4_visualization.ipynb
@@ -1275,7 +1275,7 @@
     "The [ingest](https://scanpy.readthedocs.io/en/latest/api/scanpy.tl.ingest.html) function assumes an annotated reference dataset that captures the biological variability of interest. The rational is to fit a model on the reference data and use it to project new data. For the time being, this model is a PCA combined with a neighbor lookup search tree, for which we use UMAP's implementation [[McInnes18]](https://arxiv.org/abs/1802.03426). Similar PCA-based integrations have been used before, for instance, in [[Weinreb18]](https://doi.org/10.1101/467886).\n",
     "\n",
     "* As `ingest` is simple and the procedure clear, the workflow is transparent and fast.\n",
-    "* The function leaves the data matrix itself invariant, unlike harmony integration.\n",
+    "* The function leaves the data matrix itself invariant, unlike many integration methods.\n",
     "* The function also solves the label mapping problem and maintains an embedding that might have desired properties like specific clusters or trajectories.\n",
     "\n",
     "We refer to this *asymmetric* dataset integration as *ingesting* annotations from an annotated reference `adata_ref` into an `adata` that still lacks this annotation. It is different from learning a joint representation that integrates datasets in a symmetric way as in CCA (e.g. from Seurat).\n",
@@ -1568,7 +1568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
