--- a/ipynb/day1-1_cellranger.ipynb
+++ b/ipynb/day1-1_cellranger.ipynb
@@ -96,7 +96,7 @@
     "    rm cellranger_index.tar.gz\n",
     "```\n",
     "\n",
-    "## Windows\n",
+    "## Windows (only relevant if working locally)\n",
     "Download using the [link](https://single-cell-transcriptomics.s3.eu-central-1.amazonaws.com/cellranger_index.tar.gz), and unpack in your working directory. \n",
     "This will download and extract the index in the current directory. Specify the path to this reference in the exercises accordingly. "
    ]
