--- a/ipynb/day1-1_cellranger.ipynb
+++ b/ipynb/day1-1_cellranger.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "The exercises below assume that you are enrolled in the course, and have access to the server. **These exercises are not essential to run for the rest of the course**, so you can skip them. If you want to do them anyway, you can try to [install `cellranger` locally](https://support.10xgenomics.com/single-cell-gene-expression/software/pipelines/latest/installation) (only on Linux or WSL). In addition, you will need to download the references. You can get it by with this code (choose your OS):\n",
     "\n",
-    "## Linux/MacOS/WSL\n",
+    "## Cloud server/Linux/MacOS/WSL\n",
     "Run the following commands in the terminal or other command line prompt application:\n",
     "```\n",
     "    wget https://single-cell-transcriptomics.s3.eu-central-1.amazonaws.com/cellranger_index.tar.gz\n",
@@ -97,7 +97,7 @@
     "```\n",
     "\n",
     "## Windows (only relevant if working locally)\n",
-    "Download using the [link](https://single-cell-transcriptomics.s3.eu-central-1.amazonaws.com/cellranger_index.tar.gz), and unpack in your working directory. \n",
+    "If you are working on the cloud server, follow the instructions above. Download using the [link](https://single-cell-transcriptomics.s3.eu-central-1.amazonaws.com/cellranger_index.tar.gz), and unpack in your working directory. \n",
     "This will download and extract the index in the current directory. Specify the path to this reference in the exercises accordingly. "
    ]
   },
