--- a/ipynb/day1-1_cellranger.ipynb
+++ b/ipynb/day1-1_cellranger.ipynb
@@ -443,7 +443,7 @@
    "source": [
     "**Exercise 4**: We provide you with some `web_summary.html` files. Use what you have learned above to evaluate each one of the experiments and write a short evaluation of what you observe at least ~50 words per each file. When you write a short summary, imagine you are reporting to your supervisor about how the experiment went. \n",
     "\n",
-    "Click the links and type Ctrl+S (Windows) or Cmd+S (Mac) to save the file to your computer."
+    "Click the links and type Ctrl+S (Windows) or Cmd+S (Mac) to save the file to your computer. After that, open them in your browser. "
    ]
   },
   {
