--- a/ipynb/day2-1_dimensionality_reduction.ipynb
+++ b/ipynb/day2-1_dimensionality_reduction.ipynb
@@ -10,22 +10,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "540a7f83-7f7e-49ed-91c4-f20ce2d5e3eb",
-   "metadata": {},
-   "source": [
-    "<style>\n",
-    "    .large-link {\n",
-    "        font-size: 30px;\n",
-    "        font-family: Arial, sans-serif;\n",
-    "        color: #333;\n",
-    "        text-decoration: none;\n",
-    "    }\n",
-    "</style>\n",
-    "<a href=\"../assets/pdf/05_06_dimred_integration.pdf\" target=\"_blank\" class=\"large-link\">Download Presentation: Dimensionality Reduction and Integration</a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f78a3699-243e-4ffd-b6e0-d08b567caa7f",
    "metadata": {},
    "source": [
@@ -366,7 +350,7 @@
    "id": "1f3723e8-946a-46a3-9007-7cd405b45f1d",
    "metadata": {},
    "source": [
-    "This plot ranks principle components based on the percentage of variance explained by each one. Where we observe an “elbow” or flattening curve, the majority of true signal is captured by this number of PCs.\n",
+    "This plot ranks principle components based on the percentage of variance explained by each one. The majority of true signal is captured by the PCs up until the point at which an elbow (and plateau) is reached.\n",
     "\n",
     "Including too many PCs usually does not affect much the result, while including too few PCs can affect the results very much"
    ]
@@ -683,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
