--- a/ipynb/day2-4_visualization.ipynb
+++ b/ipynb/day2-4_visualization.ipynb
@@ -423,7 +423,7 @@
     "id": "F5prQe9f0weB"
    },
    "source": [
-    "**Exercise 2 (optional)**: Let’s take a few steps back to understand all of the previous steps a little bit better! The number of genes selected by the highly_variable_genes function can significantly impact your ability to cluster. Too few genes and you cannot discriminate between different cell types, too many genes and you capture lots of noisy clusters! Try repeating the previous analysis with either 200 or 5000 highly variable genes, naming the AnnData object differently (i.e. adata_200genes) to avoid overwriting your previous results. Transfer the metadata for the new cluster labels to the original AnnData object's metadata at adata.obs and compare on the UMAP. Are the clusters different?"
+    "**Exercise 2**: Let’s take a few steps back to understand all of the previous steps a little bit better! The number of genes selected by the highly_variable_genes function can significantly impact your ability to cluster. Too few genes and you cannot discriminate between different cell types, too many genes and you capture lots of noisy clusters! Try repeating the previous analysis with either 200 or 5000 highly variable genes, naming the AnnData object differently (i.e. adata_200genes) to avoid overwriting your previous results. Transfer the metadata for the new cluster labels to the original AnnData object's metadata at adata.obs and compare on the UMAP. Are the clusters different?"
    ]
   },
   {
@@ -690,52 +690,45 @@
     "id": "VLxCUdlvjsKi"
    },
    "source": [
-    "The model_high seems to have fewer cell types, let's start with that for obtaining broader cell type categories."
+    "The model_high seems to have fewer cell types, let's start with that for obtaining broader cell type categories. \n",
+    "\n",
+    "**Exercise 4:** Use the `celltypist.annotate` function to predict cell types using the model `model_high` and `marjority_voting=True`: Save the result to a variable called `predictions_high`."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "0f0a9b62-71dd-4698-9a48-26826de8dbd1",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 12802,
-     "status": "ok",
-     "timestamp": 1694340636224,
-     "user": {
-      "displayName": "Alex Lederer",
-      "userId": "09653581722857927737"
-     },
-     "user_tz": -120
-    },
-    "id": "Gfc-uZI2S71q",
-    "outputId": "6458a888-548c-494f-8a03-b4764be06fdc"
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "🔬 Input data has 5459 cells and 10839 genes\n",
-      "🔗 Matching reference genes in the model\n",
-      "🧬 3729 features used for prediction\n",
-      "⚖️ Scaling input data\n",
-      "🖋️ Predicting labels\n",
-      "✅ Prediction done!\n",
-      "👀 Can not detect a neighborhood graph, will construct one before the over-clustering\n",
-      "⛓️ Over-clustering input data with resolution set to 10\n",
-      "🗳️ Majority voting the predictions\n",
-      "✅ Majority voting done!\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "id": "356f31cc-f4d9-4180-be63-9b0730a3f652",
+   "metadata": {},
    "source": [
-    "predictions_high = celltypist.annotate(\n",
-    "    adata_celltypist, model=model_high, majority_voting=True\n",
-    ")"
+    "<button onclick=\"toggleVisibility('answer4')\">Click for Answer</button>\n",
+    "<div id=\"answer4\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong>\n",
+    "<pre>\n",
+    "    predictions_high = celltypist.annotate(\n",
+    "    adata_celltypist, model=model_high, majority_voting=True)\n",
+    "\n",
+    "    🔬 Input data has 5459 cells and 10839 genes\n",
+    "    🔗 Matching reference genes in the model\n",
+    "    🧬 3729 features used for prediction\n",
+    "    ⚖️ Scaling input data\n",
+    "    🖋️ Predicting labels\n",
+    "    ✅ Prediction done!\n",
+    "    👀 Can not detect a neighborhood graph, will construct one before the over-clustering\n",
+    "    ⛓️ Over-clustering input data with resolution set to 10\n",
+    "    🗳️ Majority voting the predictions\n",
+    "    ✅ Majority voting done!\n",
+    "</pre>\n",
+    "    \n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script> </div>"
    ]
   },
   {
@@ -890,36 +883,43 @@
    "id": "8948299e-3807-4c53-af12-8fb43100616d",
    "metadata": {},
    "source": [
-    "Now let's do the same for the finer-grained annotations"
+    "**Exercise 5:** Now do the same (`celltypist.annotate`) for the finer-grained annotations. Save the result to a variable called `predictions_low`."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "3ea9b431-3896-4ef2-8159-6f93e0922cfc",
+   "cell_type": "markdown",
+   "id": "8f652d52-203b-4044-8dbf-e8cf1f32187c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "🔬 Input data has 5459 cells and 10839 genes\n",
-      "🔗 Matching reference genes in the model\n",
-      "🧬 3729 features used for prediction\n",
-      "⚖️ Scaling input data\n",
-      "🖋️ Predicting labels\n",
-      "✅ Prediction done!\n",
-      "👀 Detected a neighborhood graph in the input object, will run over-clustering on the basis of it\n",
-      "⛓️ Over-clustering input data with resolution set to 10\n",
-      "🗳️ Majority voting the predictions\n",
-      "✅ Majority voting done!\n"
-     ]
-    }
-   ],
    "source": [
-    "predictions_low = celltypist.annotate(\n",
-    "    adata_celltypist, model=model_low, majority_voting=True\n",
-    ")"
+    "<button onclick=\"toggleVisibility('answer5')\">Click for Answer</button>\n",
+    "<div id=\"answer5\" style=\"display:none;\">\n",
+    "<strong>Answer:</strong>\n",
+    "<pre>\n",
+    "    predictions_low = celltypist.annotate(\n",
+    "    adata_celltypist, model=model_low, majority_voting=True)\n",
+    "\n",
+    "    🔬 Input data has 5459 cells and 10839 genes\n",
+    "    🔗 Matching reference genes in the model\n",
+    "    🧬 3729 features used for prediction\n",
+    "    ⚖️ Scaling input data\n",
+    "    🖋️ Predicting labels\n",
+    "    ✅ Prediction done!\n",
+    "    👀 Can not detect a neighborhood graph, will construct one before the over-clustering\n",
+    "    ⛓️ Over-clustering input data with resolution set to 10\n",
+    "    🗳️ Majority voting the predictions\n",
+    "    ✅ Majority voting done!\n",
+    "</pre>\n",
+    "    \n",
+    "<script>\n",
+    "function toggleVisibility(id) {\n",
+    "   var element = document.getElementById(id);\n",
+    "   if (element.style.display === 'none') {\n",
+    "       element.style.display = 'block';\n",
+    "   } else {\n",
+    "       element.style.display = 'none';\n",
+    "   }\n",
+    "}\n",
+    "</script> </div>"
    ]
   },
   {
@@ -1331,7 +1331,7 @@
    "source": [
     "We need to quickly repeat the analysis steps we have previously performed before, but this time on the two samples (PBMMC_1; i.e. `sample1_adata` and PBMMC_3; i.e. `sample3_adata`) independently:\n",
     "\n",
-    "**Exercise 4:** Repeat the following steps, once with `sample1_adata` and once with `sample3_adata`:\n",
+    "**Exercise 6:** Repeat the following steps, once with `sample1_adata` and once with `sample3_adata`:\n",
     "\n",
     "`sc.pp.highly_variable_genes` with `subset=True` and `n_top_genes=3000`\n",
     "\n",
@@ -1347,8 +1347,8 @@
    "id": "7f0b0a41-5129-4fca-a971-b3756e21fc99",
    "metadata": {},
    "source": [
-    "<button onclick=\"toggleVisibility('answer4')\">Click for Answer</button>\n",
-    "<div id=\"answer4\" style=\"display:none;\">\n",
+    "<button onclick=\"toggleVisibility('answer6')\">Click for Answer</button>\n",
+    "<div id=\"answer6\" style=\"display:none;\">\n",
     "<strong>Answer:</strong> You should write the following code:\n",
     "<pre>\n",
     "    sc.pp.highly_variable_genes(sample1_adata, subset=True, n_top_genes=3000)\n",
@@ -1468,7 +1468,7 @@
    "id": "2fa2f770-cc10-4596-a4a3-84382013ca2c",
    "metadata": {},
    "source": [
-    "**Exercise 5:** Run the `sc.tl.ingest` command, with `sample3_adata` as your unlabeled dataset and `sample1_adata` as your reference dataset. Transfer the label `celltypist_annotations_high` using the `pca` as the embedding method."
+    "**Exercise 7:** Run the `sc.tl.ingest` command, with `sample3_adata` as your unlabeled dataset and `sample1_adata` as your reference dataset. Transfer the label `celltypist_annotations_high` using the `pca` as the embedding method."
    ]
   },
   {
@@ -1476,8 +1476,8 @@
    "id": "8b4409d8-1544-4ec6-90f1-a2aab7ed9e21",
    "metadata": {},
    "source": [
-    "<button onclick=\"toggleVisibility('answer5')\">Click for Answer</button>\n",
-    "<div id=\"answer5\" style=\"display:none;\">\n",
+    "<button onclick=\"toggleVisibility('answer7')\">Click for Answer</button>\n",
+    "<div id=\"answer7\" style=\"display:none;\">\n",
     "<strong>Answer:</strong> You should write the following code:\n",
     "<pre>\n",
     "    sc.tl.ingest(adata=sample3_adata, \n",
@@ -1568,7 +1568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
